# paw-and-claw

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.cargo/: config.toml
.claude/: CLAUDE.md  ROADMAP.md  modding.md  portability.md
.claude/rules/: bevy.md  game.md  modding.md
assets/data/: commanders.ron  damage_tables.ron  factions.ron  movement_costs.ron  terrain.ron  units.ron
assets/sprites/prompts/: README.md  art-direction.md  palette.md
assets/sprites/prompts/terrain/: buildings.md  rocks.md  trees.md  water.md
assets/sprites/prompts/ui/: README.md
assets/sprites/prompts/units/eastern/: README.md
assets/sprites/prompts/units/nether/: README.md
assets/sprites/prompts/units/northern/: README.md
assets/sprites/prompts/units/southern/: README.md
assets/sprites/prompts/units/western/: README.md
src/: main.rs
src/game/: ai.rs  assets.rs  combat.rs  commander.rs  faction.rs  fog.rs  map.rs  maps.rs  mod.rs  modding.rs  movement.rs  save.rs  sprites.rs  turn.rs  unit.rs  weather.rs
src/states/: mod.rs
src/ui/: mod.rs
web/: index.html
